--- Auto-Git Commit ---

--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -44,7 +44,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="ImageHeight.js"></script>
     <script>
-        for(i=0;i<10;i++){
+        var exampleimages=10;
+        for(i=0;i<exampleimages;i++){
             var width=parseInt(Math.random()*1000+500);
             var height=parseInt(Math.random()*1000+500);
             var tpl=`<a href="https://picsum.photos/${width}/${height}" data-fancybox="gallery" > <img src="https://picsum.photos/${width}/${height}" alt="example ${i}" /> </a>`;
