--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -46,6 +46,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="ImageHeight.js"></script>
     <script>
+        //Add Example images to container
         var exampleimages=100;
         for(i=0;i<exampleimages;i++){
             var width=parseInt(Math.random()*1000+300);
@@ -54,7 +55,7 @@
             var img=$(tpl);
             $('.myclasscontainer').append(img);
         }
-
+        //Add Example images to container
     </script>
     
     <script>
