Console logs for debug added

--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -64,7 +64,7 @@
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            showerrors:true // If you want to see broken images
+            showerrors:true // If you want to see broken images And console logs
         });
     </script>
 </body>
