--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/lightgallery@1.7.0/dist/css/lightgallery.css">
-
 </head>
 
 <body>
@@ -16,15 +15,12 @@
         <h1>Image Height Example</h1>
         <hr class="my-4">
     </div>
-
     <div class="myclasscontainer container" id="lightgallery">
-        <a href="https://picsum.photos/200/300" rel="gallery" >
-          <img src="https://picsum.photos/200/300" alt="example 1" />
+        <a href="https://picsum.photos/200/300">
+            <img src="https://picsum.photos/200/300" alt="example 1" />
         </a>
     </div>
-
     <br>
-
     <div class="container my-4">
         <hr class="my-4">
         <h3>External Libraries</h3>
@@ -40,44 +36,43 @@
             </li>
         </ul>
     </div>
-
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.7.0/dist/js/lightgallery.min.js"></script>
     <script src="ImageHeight.js"></script>
-
-
-
-    
     <script>
         //Add Example images to container
-        var exampleimages=100;
-        for(i=0;i<exampleimages;i++){
-            var width=parseInt(Math.random()*1000+300);
-            var height=parseInt(Math.random()*1000+300);
-            var tpl=`<a href="https://picsum.photos/${width}/${height}" rel="gallery" > <img src="https://picsum.photos/${width}/${height}" alt="example ${i}" /> </a>`;
-            var img=$(tpl);
+        var exampleimages = 100;
+        for (i = 0; i < exampleimages; i++) {
+            var width = parseInt(Math.random() * 1000 + 300);
+            var height = parseInt(Math.random() * 1000 + 300);
+            var tpl = `<a href="https://picsum.photos/${width}/${height}" > <img src="https://picsum.photos/${width}/${height}" alt="example ${i}" /> </a>`;
+            var img = $(tpl);
             $('.myclasscontainer').append(img);
         }
         //Add Example images to container
     </script>
-
     <script>
-        //$('#lightgallery').lightGallery(); 
-        $('[rel="gallery"]').fancybox(); 
-    </script>
+        var gallery = "lightgallery";
 
-    
+        if (gallery == "lightgallery") {
+            $('#lightgallery').lightGallery();
+        } else if (gallery == "fancybox") {
+            $("#lightgallery a").on('click', function() {
+                $.fancybox.open($("#lightgallery a"));
+                return false;
+            });
+        }
+    </script>
     <script>
         new ImageHeight('.myclasscontainer', {
             minwidth: 300,
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            showerrors:true // If you want to see broken images And console logs
+            showerrors: true // If you want to see broken images And console logs
         });
     </script>
 </body>
