--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -40,11 +40,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.7.0/dist/js/lightgallery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/lightgallery,npm/lg-autoplay,npm/lg-fullscreen,npm/lg-hash,npm/lg-pager,npm/lg-share,npm/lg-thumbnail,npm/lg-video,npm/lg-zoom"></script>
+    
     <script src="ImageHeight.js"></script>
     <script>
         //Add Example images to container
-        var exampleimages = 100;
+        var exampleimages = 10;
         for (i = 0; i < exampleimages; i++) {
             var width = parseInt(Math.random() * 1000 + 300);
             var height = parseInt(Math.random() * 1000 + 300);
@@ -58,7 +59,9 @@
         var gallery = "lightgallery";
 
         if (gallery == "lightgallery") {
-            $('#lightgallery').lightGallery();
+            $(document).ready(function(){
+                $('#lightgallery').lightGallery();
+            });
         } else if (gallery == "fancybox") {
             $("#lightgallery a").on('click', function() {
                 $.fancybox.open($("#lightgallery a"));
@@ -71,7 +74,7 @@
             minwidth: 300,
             minheight: 100,
             maxrow: 5,
-            margin: 10,
+            margin: 0,
             showerrors: true // If you want to see broken images And console logs
         });
     </script>
