--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -15,7 +15,7 @@
         <h1>Image Height Example</h1>
         <hr class="my-4">
     </div>
-    <div class="myclasscontainer container" id="lightgallery">
+    <div class="myclasscontainer container2" id="lightgallery">
         <a href="https://picsum.photos/200/300">
             <img src="https://picsum.photos/200/300" alt="example 1" />
         </a>
@@ -41,11 +41,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/combine/npm/lightgallery,npm/lg-autoplay,npm/lg-fullscreen,npm/lg-hash,npm/lg-pager,npm/lg-share,npm/lg-thumbnail,npm/lg-video,npm/lg-zoom"></script>
-    
     <script src="ImageHeight.js"></script>
     <script>
         //Add Example images to container
-        var exampleimages = 10;
+        var exampleimages = 100;
         for (i = 0; i < exampleimages; i++) {
             var width = parseInt(Math.random() * 1000 + 300);
             var height = parseInt(Math.random() * 1000 + 300);
@@ -70,7 +69,8 @@
         }
     </script>
     <script>
-        new ImageHeight('.myclasscontainer', {
+
+        $('.myclasscontainer').ImageHeight({
             minwidth: 300,
             minheight: 100,
             maxrow: 5,
