--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -44,10 +44,10 @@
     <script src="ImageHeight.js"></script>
     <script>
         //Add Example images to container
-        var exampleimages = 100;
+        var exampleimages = 10;
         for (i = 0; i < exampleimages; i++) {
-            var width = parseInt(Math.random() * 1000 + 300);
-            var height = parseInt(Math.random() * 1000 + 300);
+            var width = parseInt(Math.random() * 10 + 3)*100;
+            var height = parseInt(Math.random() * 10 + 3)*100;
             var tpl = `<a href="https://picsum.photos/${width}/${height}" > <img src="https://picsum.photos/${width}/${height}" alt="example ${i}" /> </a>`;
             var img = $(tpl);
             $('.myclasscontainer').append(img);
