--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -84,7 +84,7 @@
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            showerrors: false // If you want to see broken images And console logs
+            showerrors: true // If you want to see broken images And console logs
         });
     </script>
 </body>
