--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -50,7 +50,7 @@
     </script>
     <script>
         //Add Example images to container
-        var exampleimages = 500;
+        var exampleimages = 100;
         for (i = 0; i < exampleimages; i++) {
             var width = parseInt(Math.random() * 50 + 50)*10;
             var height = parseInt(Math.random() * 50 + 50)*10;
@@ -84,7 +84,8 @@
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            showerrors: true // If you want to see broken images And console logs
+            placeholder:false, // True If you want to see placeholders for images to be loaded, or False to wait until a line is completely loaded to show it
+            showerrors: false // If you want to see broken images And console logs (images visibility overrided by placeholder)
         });
     </script>
 </body>
