--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -50,10 +50,10 @@
     </script>
     <script>
         //Add Example images to container
-        var exampleimages = 100;
+        var exampleimages = 10; // try with 1000 ! 
         for (i = 0; i < exampleimages; i++) {
-            var width = parseInt(Math.random() * 10 + 3)*100;
-            var height = parseInt(Math.random() * 10 + 3)*100;
+            var width = parseInt(Math.random() * 100 + 30)*10;
+            var height = parseInt(Math.random() * 100 + 30)*10;
             if (imagesrul=="picsum"){
                 var url=`https://picsum.photos/${width}/${height}`;
             }else if(imagesrul=="placeholder"){
@@ -82,7 +82,7 @@
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            placeholder:false, // True If you want to see placeholders for images to be loaded, or False to wait until a line is completely loaded to show it
+            placeholder:true, // True If you want to see placeholders for images to be loaded, or False to wait until a line is completely loaded to show it
             showerrors: false // If you want to see broken images And console logs (images visibility overrided by placeholder)
         });
     </script>
