--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -83,7 +83,7 @@
             maxrow: 5,
             margin: 10,
             placeholder:true, // True If you want to see placeholders for images to be loaded, or False to wait until a line is completely loaded to show it
-            showerrors: false // If you want to see broken images And console logs (images visibility overrided by placeholder)
+            showerrors: true // If you want to see broken images And console logs (images visibility overrided by placeholder)
         });
     </script>
 </body>
