firefox fix width

--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -17,7 +17,7 @@
         <h1>Image Height Example</h1>
         <hr class="my-4">
     </div>
-    <div class="myclasscontainer container2" id="lightgallery">
+    <div class="myclasscontainer container" id="lightgallery">
         <a href="https://picsum.photos/id/999/200/300">
             <img src="https://picsum.photos/id/999/200/300" alt="example 1" />
         </a>
