--- Auto-Git Commit ---

--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -39,7 +39,7 @@
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="ImageHeight.min.js"></script>
+    <script src="ImageHeight.js"></script>
 
     <!--Extras Start-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
