--- a/JS/ImageHeight/example.html
+++ b/JS/ImageHeight/example.html
@@ -92,9 +92,9 @@
             minheight: 100,
             maxrow: 5,
             margin: 10,
-            lazyload:false, // enable placeholder is recomended along this option
+            lazyload:true, // enable placeholder is recomended along this option
             placeholder:true, // True If you want to see placeholders for images to be loaded, or False to wait until a line is completely loaded to show it
-            showerrors: false // If you want to see broken images And console logs (images visibility overrided by placeholder)
+            showerrors: true // If you want to see broken images And console logs (images visibility overrided by placeholder)
         });
     </script>
 </body>
